@@ -1,0 +1,2 @@
+file(GLOB man_1 *.1)
+install(FILES ${man_1} DESTINATION share/man/man1)
